--- a/themes/academic/i18n/en.yaml
+++ b/themes/academic/i18n/en.yaml
@@ -187,7 +187,7 @@
   translation: Uncategorized
 
 - id: topic_mechanism
-  translation: Multi-Modal Learning Mechanism
+  translation: Multimodal Learning Mechanism
 
 - id: topic_scene_understanding
   translation: Scene Understanding
